<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="navigation_bar">Bottom Navigation</string>


    <string name="archeive_text">Wallet</string>
    <string name="record">Record</string>
    <string name="button_old_receipts">Old Receipts</string>
    <string name="button_take_picture">Take picture of the receipt.</string>


    <string name="total_due">Total Due</string>
    <string name="set_count_bills">Set a count for Bills and essential spendings</string>
    <string name="button_water_bill">Water Bill</string>
    <string name="button_electricity">Electricity</string>
    <string name="button_health">Health</string>
    <string name="button_education">Education</string>
    <string name="button_child_care">Child Care</string>
    <string name="button_mortgage">Mortgage</string>
    <string name="button_insurance">Insurance</string>
    <string name="button_loan">Loan</string>
    <string name="button_taxes">Taxes</string>
    <string name="button_others">Others</string>


    <string name="sign_up">Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="about_hint">About us</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_user">Already a user? Log in.</string>

    <string name="name_hint_profile">Name</string>
    <string name="email_hint_profile">Email</string>
    <string name="password_hint_profile">Password</string>
    <string name="community_button_text">Community</string>
    <string name="log_out_button_text">Log Out</string>
    <string name="delete_account_button_text">Delete Account</string>

    <string name="overview">Overview</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="total_due_overview">Total Due</string>
    <string name="stat">My stats</string>
    <string name="archeive">Archeive</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="button_bills">Bills</string>
    <string name="total_saving">Total Saving</string>

    <string name="old_receipts">Old receipts</string>


    <string name="login_text">Log in</string>
    <string name="name_hint_login">Name</string>
    <string name="email_hint_login">Email</string>
    <string name="password_hint_login">Password</string>
    <string name="login_button_text">Log in</string>
    <string name="not_registered_text">Not registered yet? Sign up.</string>


    <string name="challenge_hint">Name the Challenge.</string>
    <string name="start_button_text">Start</string>
    <string name="countdown_message">Let the countdown begin!</string>
    <string name="challenge_description">Challenge yourself to a mini adventure!</string>
    <string name="new_challenge">Begin a new challenge!!</string>
    <string name="challenges_title">Challenges</string>
    <string name="countdown_text">Countdown</string>
    <string name="challenge_time_hint">Countdown Time</string>


    <string name="total_savings">Total Savings</string>
    <string name="no_savings_yet">No savings yet.</string>
    <string name="take_on_challenges">Take on fun challenges to boost your saving journey!</string>
    <string name="create_challenges">Create a challenge.</string>


    <string name="categories">Categories</string>
    <string name="select_categories">Select categories</string>
    <string name="shopping">Shopping</string>
    <string name="subscription">Subscription</string>
    <string name="travel">Travel</string>
    <string name="leisure">Leisure</string>
    <string name="dining_out">Dining Out</string>
    <string name="personal_care">Personal Care</string>
    <string name="special_occasions">Special Occasions</string>
    <string name="transportation">Transportation</string>
    <string name="work_expenses">Work Expenses</string>
    <string name="others">Others</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_categories">Categories</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_add">Add</string>

    <string name="set_budget">Set a Budget</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="enter_budget">Enter the budget.</string>
    <string name="done">Done</string>

    <string name="community">Community</string>
    <string name="add_community_button">Add Community</string>
    <string name="existing_community_text">My Communities</string>
    <string name="user1">User</string>
    <string name="amount1">Amount</string>


    <string name="mybills">My Bills</string>
    <string name="inactivebudget">Budget history</string>
    <string name="inactivebill">Bill history</string>


    <string name="income">Enter your income</string>
    <string name="Income">Income :</string>
    <string name="create_button">Create community</string>
    <string name="community_description">Easy collaboration and budgeting.</string>


    <string name="mybudget">My budget</string>


    <string name="investment">My investments</string>
    <string name="spending">My spendings</string>
    <string name="funds">Emergency Funds</string>
    <string name="value">Enter the value</string>

    <string name="spent_hint">Value spent</string>
    <string name="date">Date</string>

    <string name="spent_description">Keep a track of your spendings.</string>
    <string name="create_spending">Expenditure</string>


    <string name="about_description">An intuitive mobile app designed to empower users in managing personal finances effortlessly. Track daily, weekly, and monthly spending, categorize expenses, set budgets, and gain valuable insights through user-friendly tools for effective financial control.</string>
    <string name="developer_info">Developed by Abhay Kumar and José Franco, Computer Science undergraduates in their second year at IADE. For inquiries and assistance, kindly reach out to us.</string>
    <string name="myemail">abhaylagah01@gmail.com</string>
    <string name="version">2024.0.0.1</string>
    <string name="jemail">josepedromartinspfranco@gmail.com</string>

    <string name="category_hint">Name of the category here.</string>
    <string name="period_hint">Desired period</string>
    <string name="value_hint">Budget Value</string>

    <string name="bill_hint">Name of the bill here.</string>

    <string name="datestart">Start date</string>
    <string name="dateend">End date</string>

    <string name="random">Press button to generate number</string>
    <string name="enter">Enter the key</string>
    <string name="generate">Generate</string>
    <string name="type">Specify the budget</string>
    <string name="typeB">Specify the expense</string>
    <string name="key">Enter the key</string>
    <string name="value_">Value for the community</string>

    <string name="login">Login to</string>
    <string name="account">your account</string>
    <string name="sign">Create a</string>
    <string name="acc">new account</string>
    <string name="splurge">Add splurges</string>
    <string name="splurgeview">View my splurges</string>
    <string name="add">Add</string>

</resources>