<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mywhite"
    tools:context=".EditBudget">


    <TextView
        android:id="@+id/set_budget_categorie_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/set_budget"
        android:textColor="@color/dblue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <EditText
        android:id="@+id/descriptionExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/type"
        android:textColorHint="@color/lightgrey"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/budget_cate_num2"
        app:layout_constraintStart_toStartOf="@+id/budget_cate_num2"
        app:layout_constraintTop_toBottomOf="@+id/budget_cate_num2" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/datestart"
        android:textColorHint="@color/lightgrey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_budget_categorie_view2" />


    <EditText
        android:id="@+id/endDate"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/dateend"
        android:textColorHint="@color/lightgrey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startDate" />

    <EditText
        android:id="@+id/budget_cate_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_budget"
        android:inputType="number"
        android:textColorHint="@color/lightgrey"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDate" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/categories"
        android:textColor="@color/dblue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="368dp"
        android:layout_height="297dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:divider="@drawable/table_divider"
        android:showDividers="middle"
        android:stretchColumns="0,1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories"
        app:layout_constraintVertical_bias="0.105">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/shopping_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shopping"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/subscription_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription"
                android:layout_marginStart="4dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/travel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/leisure_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leisure"
                android:layout_marginStart="4dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dinningout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dining_out"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/personalcare_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_care"
                android:layout_marginStart="4dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/specialoccassions_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_occasions"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/transportation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transportation"
                android:layout_marginStart="4dp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/workexpenses_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_expenses"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/others_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:layout_marginStart="4dp"/>

        </TableRow>
    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

