<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dblue"
    tools:context=".Category">


    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/categories"
        android:textColor="@color/lblue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectcategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/select_categories"
        android:textColor="@color/lblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:divider="@drawable/table_divider"
        android:showDividers="middle"
        android:stretchColumns="0,1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectcategories"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/shopping_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shopping" />

            <Button
                android:id="@+id/subscription_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/travel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel" />

            <Button
                android:id="@+id/leisure_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leisure" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/dinningout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dining_out" />

            <Button
                android:id="@+id/personalcare_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_care" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/specialoccassions_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/special_occasions" />

            <Button
                android:id="@+id/transportation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transportation" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/workexpenses_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_expenses" />

            <Button
                android:id="@+id/others_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others" />

        </TableRow>
    </TableLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="384dp"
        android:layout_height="57dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bottom_background"
        app:itemIconTint="@android:color/tab_indicator_text"
        app:itemTextColor="@color/lblue"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>

