<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp">

   <LinearLayout
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="8dp"
       android:gravity="center_vertical"
       android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

       <TextView
           android:id="@+id/namedbill"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textAlignment="center"
           tools:text="@string/bill_hint" />

       <TextView
           android:id="@+id/typeBill"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:text="@string/typeB" />

       <TextView
           android:id="@+id/startperiod"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:text="@string/period_hint" />

       <TextView
           android:id="@+id/endperiod"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:text="@string/period_hint" />

       <TextView
           android:id="@+id/selectedvalue"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:text="@string/value_hint" />

   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>