<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="17sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="343dp"
        android:layout_height="119dp"
        android:gravity="center"
        android:text="@string/about_description"
        android:textColor="@color/lightgrey"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTextView"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/developerInfoTextView"
        android:layout_width="345dp"
        android:layout_height="75dp"
        android:text="@string/developer_info"
        android:textColor="@color/lightgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/emailinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myemail"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developerInfoTextView"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/emailinfoj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jemail"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/developerInfoTextView"
        app:layout_constraintVertical_bias="0.089" />

</androidx.constraintlayout.widget.ConstraintLayout>